--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             <label class="menu-item toggle-item">
                 <div class="toggle-label">
                     <span class="menu-icon">📄</span>
-                    <span>ページを参照</span>
+                    <span>AIがページを参照できる</span>
                 </div>
                 <input type="checkbox" id="referencePageToggle" checked>
                 <span class="toggle-switch"></span>
