feat: implement initial Notion AI Memo chat application with rate limiting.

--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
                             </select>
                         </div>
                         <textarea id="promptTextarea" class="prompt-textarea" rows="10"
-                            placeholder="システムプロンプトを入力してください..."></textarea>
+                            placeholder="デフォルトのプロンプトを使用します（カスタマイズする場合はここに入力）"></textarea>
 
                     </div>
                     <div class="modal-footer">
