--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- キャッシュ制御メタタグはJavaScriptで動的に追加されます (DEBUG_MODE時のみ) -->
     <title>Notion AI Memo - Chat</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -323,7 +324,7 @@
                 </div>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
